fixed spacing, added new colors

--- a/mystyle.css
+++ b/mystyle.css
@@ -9,7 +9,7 @@ body {
     top: 0;
     left: 0;
     z-index: 999;
-    background: #aca4a6;
+    background: #FF3399;
 }
 .header h1#logo {
     display: inline=block;
